--- a/Revenues_R.ipynb
+++ b/Revenues_R.ipynb
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We prefer the 6 ARIMA(1,1,1)X(2,0,0) model because it the has the smallest AIC."
+    "We prefer the ARIMA(1,1,1)X(2,0,0)6 model because it has the smallest AIC."
    ]
   },
   {
