--- a/Revenues_R.ipynb
+++ b/Revenues_R.ipynb
@@ -307,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The time plot of the standardized residuals shows no obvious patterns. The ACF of the standardized residuals show no departure of the model assunptions and the Q-statistic is never significant at the lags shown. Finally, the histogram and the normal Q-Q plot of the residuals show that the residuals are close to normality except for a few extreme values in the tails. The Shapiro-Wilk test yields a p-value of 0.06662 which indicates that it is possible that the residuals are normal."
+    "The time plot of the standardized residuals shows no obvious patterns. The ACF of the standardized residuals show no departure of the model assunptions and the Q-statistic is never significant at the lags shown. Finally, the histogram and the normal Q-Q plot of the residuals show that the residuals are close to normality except for a few extreme values in the tails. The Shapiro-Wilk test yields a p-value of 0.06662 which indicates that it is possible that the residuals are normal. As a result the diagnostics show that the model is adequate."
    ]
   },
   {
